--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Organeller Bilim Şenliği</title>
+  <title>Hücre Organelleri</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
-    a { display: block; margin: 10px 0; font-size: 18px; color: #2a7ae2; text-decoration: none; }
+    h1 { text-align: center; }
+    ul { list-style-type: none; padding: 0; }
+    li { margin: 10px 0; }
+    a { text-decoration: none; color: #2a7ae2; font-size: 20px; }
     a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-  <h1>Organeller Bilim Şenliği</h1>
-  <a href="mitokondri.html" target="_blank">Mitokondri</a>
+  <h1>Hücre Organelleri</h1>
+  <ul>
+    <li><a href="animal-cell.html" target="_blank">Hayvan Hücresi (Genel)</a></li>
+    <li><a href="mitokondri.html" target="_blank">Mitokondri</a></li>
+    <li><a href="cekirdek.html" target="_blank">Çekirdek (Nükleus)</a></li>
+    <li><a href="endoplazmik.html" target="_blank">Endoplazmik Retikulum</a></li>
+    <li><a href="ribozom.html" target="_blank">Ribozom</a></li>
+    <li><a href="golgi.html" target="_blank">Golgi Aygıtı</a></li>
+    <li><a href="lizozom.html" target="_blank">Lizozom</a></li>
+  </ul>
 </body>
 </html>
