--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="animal-cell.html" target="_blank">Hayvan Hücresi (Genel)</a></li>
     <li><a href="mitokondri.html" target="_blank">Mitokondri</a></li>
     <li><a href="cekirdek.html" target="_blank">Çekirdek (Nükleus)</a></li>
-    <li><a href="endoplazmik.html" target="_blank">Endoplazmik Retikulum</a></li>
+    <li><a href="endoplazmik-retikulum.html" target="_blank">Endoplazmik Retikulum</a></li>
     <li><a href="ribozom.html" target="_blank">Ribozom</a></li>
     <li><a href="golgi.html" target="_blank">Golgi Aygıtı</a></li>
     <li><a href="lizozom.html" target="_blank">Lizozom</a></li>
