--- a/mitokondri.html
+++ b/mitokondri.html
@@ -2,20 +2,60 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mitokondri</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
-    iframe { width: 100%; height: 400px; border: none; }
-    h1 { color: #2a7ae2; }
+    body { 
+      font-family: Arial, sans-serif; 
+      max-width: 600px; 
+      margin: auto; 
+      padding: 20px; 
+      background: #111; 
+      color: #eee;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 { 
+      color: #2a7ae2; 
+      font-size: 2.5rem;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    iframe { 
+      width: 100%; 
+      height: 450px; 
+      border: none; 
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 1.3rem;
+      line-height: 1.6;
+      text-align: center;
+      max-width: 600px;
+    }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1.1rem;
+      }
+      iframe {
+        height: 300px;
+      }
+    }
   </style>
 </head>
 <body>
   <h1>Mitokondri – Hücrenin Enerji Santrali</h1>
   <iframe
-    src="https://sketchfab.com/models/f7ba00acafa64106a913fd2a312002a6/embed"
+    src="https://sketchfab.com/models/f7ba00acafa64106a913fd2a312002a6/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
     allowfullscreen
     mozallowfullscreen="true"
     webkitallowfullscreen="true"
+    allow="autoplay; fullscreen; xr-spatial-tracking"
+    title="Mitokondri Modeli"
   ></iframe>
   <p>
     Mitokondri, hücrenin enerji üretim merkezidir. Besinleri ve oksijeni kullanarak ATP (adenozin trifosfat) üretir.
