--- a/animal-cell.html
+++ b/animal-cell.html
@@ -1,44 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Hayvan Hücresi 3D Modeli</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hayvan Hücresi</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       padding: 20px;
-      text-align: center;
+      background-color: #f0f8ff;
+      color: #333;
     }
     iframe {
-      border: none;
-      width: 640px;
+      width: 100%;
       height: 480px;
-      margin-bottom: 20px;
+      border: none;
+    }
+    h1 {
+      color: #2a7ae2;
+      font-size: 24px;
     }
     p {
       font-size: 18px;
-      line-height: 1.5;
-    }
-    a {
-      display: inline-block;
-      margin-top: 30px;
-      color: #2a7ae2;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Hayvan Hücresi 3D Modeli</h1>
-  <iframe title="Animal Cell" src="https://sketchfab.com/models/0b15c013059844d7a26c1f16752f8b61/embed" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"></iframe>
+  <h1>Hayvan Hücresi – Organellerin Genel Görünümü</h1>
+  <iframe 
+    src="https://sketchfab.com/models/0b15c013059844d7a26c1f16752f8b61/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true">
+  </iframe>
   <p>
-    Hayvan hücresi, birçok organel içerir ve canlıların temel yapı taşıdır. Bu modelde hücrenin farklı organellerini 3D olarak görebilirsiniz.
+    Bu 3D modelde bir hayvan hücresinin genel yapısını ve içinde bulunan organelleri görebilirsiniz. 
+    Hücre zarı, çekirdek, mitokondri, ribozom, endoplazmik retikulum, golgi aygıtı gibi organeller detaylı olarak modellenmiştir.
   </p>
-  <a href="index.html">Ana Sayfaya Dön</a>
 </body>
 </html>
