--- a/endoplazmik.html
+++ b/endoplazmik.html
@@ -2,43 +2,42 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Endoplazmik Retikulum 3D Modeli</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Endoplazmik Retikulum</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       padding: 20px;
-      text-align: center;
+      background-color: #f0f8ff;
+      color: #333;
     }
     iframe {
+      width: 100%;
+      height: 360px;
       border: none;
-      width: 640px;
-      height: 480px;
-      margin-bottom: 20px;
+    }
+    h1 {
+      color: #2a7ae2;
+      font-size: 24px;
     }
     p {
       font-size: 18px;
-      line-height: 1.5;
-    }
-    a {
-      display: inline-block;
-      margin-top: 30px;
-      color: #2a7ae2;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Endoplazmik Retikulum 3D Modeli</h1>
-  <iframe title="Endoplasmic Reticulum" src="https://sketchfab.com/models/15ea78c8537b476e8a4660859b7f5ebf/embed" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"></iframe>
+  <h1>Endoplazmik Retikulum – Madde Taşıma Sistemi</h1>
+  <iframe 
+    src="https://sketchfab.com/models/15ea78c8537b476e8a4660859b7f5ebf/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true">
+  </iframe>
   <p>
-    Endoplazmik retikulum, protein ve lipid sentezinden sorumlu hücre içi organeldir. İki türü vardır: Granüllü (Rough) ve Granülsüz (Smooth).
+    Endoplazmik Retikulum, hücre içinde madde taşıyan bir ağ sistemidir. İki çeşidi vardır: 
+    Granüllü (ribozomlu) ve granülsüz. Protein ve lipid sentezinde önemli rol oynar.
   </p>
-  <a href="index.html">Ana Sayfaya Dön</a>
 </body>
 </html>
