--- a/ribozom.html
+++ b/ribozom.html
@@ -2,43 +2,42 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Ribozom 3D Modeli</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ribozom</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       padding: 20px;
-      text-align: center;
+      background-color: #f9f9f9;
+      color: #333;
     }
     iframe {
+      width: 100%;
+      height: 360px;
       border: none;
-      width: 640px;
-      height: 480px;
-      margin-bottom: 20px;
+    }
+    h1 {
+      color: #2a7ae2;
+      font-size: 24px;
     }
     p {
       font-size: 18px;
-      line-height: 1.5;
-    }
-    a {
-      display: inline-block;
-      margin-top: 30px;
-      color: #2a7ae2;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Ribozom 3D Modeli</h1>
-  <iframe title="Ribosome" src="https://sketchfab.com/models/2df1aeea00a64530af37f10daf0210fe/embed" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"></iframe>
+  <h1>Ribozom – Protein Fabrikası</h1>
+  <iframe 
+    src="https://sketchfab.com/models/2df1aeea00a64530af37f10daf0210fe/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true">
+  </iframe>
   <p>
-    Ribozomlar, hücrede protein sentezinin gerçekleştiği organellerdir. Sitoplazmada serbest halde ya da endoplazmik retikulum üzerinde bulunabilirler.
+    Ribozomlar, hücrede protein sentezini gerçekleştiren yapılardır. Serbest halde sitoplazmada bulunabilir
+    ya da endoplazmik retikulumun üzerinde yer alabilirler.
   </p>
-  <a href="index.html">Ana Sayfaya Dön</a>
 </body>
 </html>
