--- a/golgi.html
+++ b/golgi.html
@@ -2,43 +2,42 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Golgi Cisimciği 3D Modeli</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Golgi Aygıtı</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       padding: 20px;
-      text-align: center;
+      background-color: #f9f9f9;
+      color: #333;
     }
     iframe {
+      width: 100%;
+      height: 360px;
       border: none;
-      width: 640px;
-      height: 480px;
-      margin-bottom: 20px;
+    }
+    h1 {
+      color: #2a7ae2;
+      font-size: 24px;
     }
     p {
       font-size: 18px;
-      line-height: 1.5;
-    }
-    a {
-      display: inline-block;
-      margin-top: 30px;
-      color: #2a7ae2;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Golgi Cisimciği 3D Modeli</h1>
-  <iframe title="Golgi Apparatus" src="https://sketchfab.com/models/eb4ef6566cce4c65a1c4bc33fe8c0f7b/embed" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"></iframe>
+  <h1>Golgi Aygıtı – Paketleme ve Dağıtım Merkezi</h1>
+  <iframe 
+    src="https://sketchfab.com/models/eb4ef6566cce4c65a1c4bc33fe8c0f7b/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true">
+  </iframe>
   <p>
-    Golgi cisimciği, hücrede proteinleri ve diğer molekülleri işleyip paketleyen ve salgılayan organeldir. Hücre içi taşımada önemli rol oynar.
+    Golgi aygıtı, hücre içinde üretilen protein ve lipidleri işleyip paketleyerek gerekli yerlere ileten bir organeldir.
+    Hücre içi taşımada önemli rol oynar.
   </p>
-  <a href="index.html">Ana Sayfaya Dön</a>
 </body>
 </html>
