--- a/golgi.html
+++ b/golgi.html
@@ -10,21 +10,24 @@
       max-width: 800px;
       margin: auto;
       padding: 20px;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #121212;
+      color: #ffffff;
     }
     iframe {
       width: 100%;
       height: 360px;
       border: none;
+      margin-bottom: 20px;
     }
     h1 {
-      color: #2a7ae2;
+      color: #00bcd4;
       font-size: 24px;
     }
     p {
       font-size: 18px;
+      line-height: 1.6;
     }
+    a { color: #90caf9; }
   </style>
 </head>
 <body>
