--- a/cekirdek.html
+++ b/cekirdek.html
@@ -2,42 +2,36 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Çekirdek (Nucleus)</title>
+  <title>Çekirdek</title>
   <style>
     body {
+      background-color: #121212;
+      color: #ffffff;
       font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
+      margin: 0;
       padding: 20px;
-      background-color: #f0f8ff;
-      color: #333;
+    }
+    h1 {
+      color: #bb86fc;
     }
     iframe {
       width: 100%;
-      height: 360px;
+      height: 380px;
       border: none;
-    }
-    h1 {
-      color: #2a7ae2;
-      font-size: 24px;
-    }
-    p {
-      font-size: 18px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Çekirdek – Hücrenin Komuta Merkezi</h1>
-  <iframe 
-    src="https://sketchfab.com/models/7e01bff42b2d47fab640503bcef071e6/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+  <h1>Çekirdek – Hücrenin Yönetim Merkezi</h1>
+  <iframe
+    src="https://sketchfab.com/models/7e01bff42b2d47fab640503bcef071e6/embed"
     allowfullscreen
     mozallowfullscreen="true"
-    webkitallowfullscreen="true">
-  </iframe>
+    webkitallowfullscreen="true"
+  ></iframe>
   <p>
-    Çekirdek, hücrenin yönetim merkezidir. DNA burada bulunur ve hücresel aktivitelerin çoğu buradan kontrol edilir. 
-    Hücrenin bölünmesi, protein sentezi gibi hayati işlemler çekirdeğin kontrolündedir.
+    Çekirdek, hücrenin yönetim merkezidir. DNA’yı içerir ve hücresel faaliyetleri kontrol eder.
   </p>
 </body>
 </html>
