--- a/cekirdek.html
+++ b/cekirdek.html
@@ -2,36 +2,42 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Çekirdek</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Çekirdek (Nucleus)</title>
   <style>
     body {
-      background-color: #121212;
-      color: #ffffff;
       font-family: Arial, sans-serif;
-      margin: 0;
+      max-width: 800px;
+      margin: auto;
       padding: 20px;
-    }
-    h1 {
-      color: #bb86fc;
+      background-color: #121212; /* Koyu arka plan */
+      color: #e0e0e0; /* Açık yazı */
     }
     iframe {
       width: 100%;
-      height: 380px;
+      height: 360px;
       border: none;
-      margin-bottom: 20px;
+    }
+    h1 {
+      color: #bb86fc; /* Mor tonlarında başlık */
+      font-size: 24px;
+    }
+    p {
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <h1>Çekirdek – Hücrenin Yönetim Merkezi</h1>
-  <iframe
-    src="https://sketchfab.com/models/7e01bff42b2d47fab640503bcef071e6/embed"
+  <h1>Çekirdek – Hücrenin Komuta Merkezi</h1>
+  <iframe 
+    src="https://sketchfab.com/models/7e01bff42b2d47fab640503bcef071e6/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
     allowfullscreen
     mozallowfullscreen="true"
-    webkitallowfullscreen="true"
-  ></iframe>
+    webkitallowfullscreen="true">
+  </iframe>
   <p>
-    Çekirdek, hücrenin yönetim merkezidir. DNA’yı içerir ve hücresel faaliyetleri kontrol eder.
+    Çekirdek, hücrenin yönetim merkezidir. DNA burada bulunur ve hücresel aktivitelerin çoğu buradan kontrol edilir. 
+    Hücrenin bölünmesi, protein sentezi gibi hayati işlemler çekirdeğin kontrolündedir.
   </p>
 </body>
 </html>
