--- a/animal-cell.html
+++ b/animal-cell.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hayvan Hücresi</title>
+  <title>Hayvan Hücresi (Animal Cell)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 800px;
       margin: auto;
       padding: 20px;
-      background-color: #f0f8ff;
-      color: #333;
+      background-color: #121212; /* Koyu arka plan */
+      color: #e0e0e0; /* Açık yazı */
     }
     iframe {
       width: 100%;
@@ -19,7 +19,7 @@
       border: none;
     }
     h1 {
-      color: #2a7ae2;
+      color: #bb86fc; /* Mor tonlarında başlık */
       font-size: 24px;
     }
     p {
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>Hayvan Hücresi – Organellerin Genel Görünümü</h1>
+  <h1>Hayvan Hücresi</h1>
   <iframe 
     src="https://sketchfab.com/models/0b15c013059844d7a26c1f16752f8b61/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
     allowfullscreen
@@ -36,8 +36,7 @@
     webkitallowfullscreen="true">
   </iframe>
   <p>
-    Bu 3D modelde bir hayvan hücresinin genel yapısını ve içinde bulunan organelleri görebilirsiniz. 
-    Hücre zarı, çekirdek, mitokondri, ribozom, endoplazmik retikulum, golgi aygıtı gibi organeller detaylı olarak modellenmiştir.
+    Hayvan hücresi, çok sayıda organelden oluşan karmaşık bir yapıdır. Hücrenin yaşamsal fonksiyonları bu organeller sayesinde gerçekleşir.
   </p>
 </body>
 </html>
