--- a/endoplazmik.html
+++ b/endoplazmik.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Endoplazmik Retikulum</title>
+  <title>Endoplazmik Retikulum (Endoplasmic Reticulum)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 800px;
       margin: auto;
       padding: 20px;
-      background-color: #f0f8ff;
-      color: #333;
+      background-color: #121212; /* Koyu arka plan */
+      color: #e0e0e0; /* Açık yazı */
     }
     iframe {
       width: 100%;
@@ -19,7 +19,7 @@
       border: none;
     }
     h1 {
-      color: #2a7ae2;
+      color: #bb86fc; /* Mor tonlarında başlık */
       font-size: 24px;
     }
     p {
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>Endoplazmik Retikulum – Madde Taşıma Sistemi</h1>
+  <h1>Endoplazmik Retikulum</h1>
   <iframe 
     src="https://sketchfab.com/models/15ea78c8537b476e8a4660859b7f5ebf/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
     allowfullscreen
@@ -38,6 +38,9 @@
   <p>
     Endoplazmik Retikulum, hücre içinde madde taşıyan bir ağ sistemidir. İki çeşidi vardır: 
     Granüllü (ribozomlu) ve granülsüz. Protein ve lipid sentezinde önemli rol oynar.
+  
   </p>
 </body>
 </html>
+    
+  
