--- a/ribozom.html
+++ b/ribozom.html
@@ -10,8 +10,8 @@
       max-width: 800px;
       margin: auto;
       padding: 20px;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #121212; /* Koyu arka plan */
+      color: #e0e0e0; /* Açık yazı */
     }
     iframe {
       width: 100%;
@@ -19,7 +19,7 @@
       border: none;
     }
     h1 {
-      color: #2a7ae2;
+      color: #bb86fc; /* Mor tonlarında başlık */
       font-size: 24px;
     }
     p {
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>Ribozom – Protein Fabrikası</h1>
+  <h1>Ribozom – Protein Sentezinin Kahramanı</h1>
   <iframe 
     src="https://sketchfab.com/models/2df1aeea00a64530af37f10daf0210fe/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
     allowfullscreen
@@ -36,8 +36,7 @@
     webkitallowfullscreen="true">
   </iframe>
   <p>
-    Ribozomlar, hücrede protein sentezini gerçekleştiren yapılardır. Serbest halde sitoplazmada bulunabilir
-    ya da endoplazmik retikulumun üzerinde yer alabilirler.
+    Ribozomlar, hücre içinde protein sentezinden sorumludur. RNA’dan aldığı bilgiyi kullanarak amino asitleri birleştirir.
   </p>
 </body>
 </html>
