--- a/lizozom.html
+++ b/lizozom.html
@@ -2,43 +2,41 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Lizozom 3D Modeli</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lizozom</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       padding: 20px;
-      text-align: center;
+      background-color: #121212; /* Koyu arka plan */
+      color: #e0e0e0; /* Açık renk yazı */
     }
     iframe {
+      width: 100%;
+      height: 360px;
       border: none;
-      width: 640px;
-      height: 480px;
-      margin-bottom: 20px;
+    }
+    h1 {
+      color: #bb86fc; /* Mor tonlarında başlık */
+      font-size: 24px;
     }
     p {
       font-size: 18px;
-      line-height: 1.5;
-    }
-    a {
-      display: inline-block;
-      margin-top: 30px;
-      color: #2a7ae2;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Lizozom 3D Modeli</h1>
-  <iframe title="Lysosome" src="https://sketchfab.com/models/9b793256681a4d2da09aa887d38a1eb6/embed" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"></iframe>
+  <h1>Lizozom – Hücrenin Sindirim Merkezi</h1>
+  <iframe
+    src="https://sketchfab.com/models/9b793256681a4d2da09aa887d38a1eb6/embed?autostart=1&preload=1&ui_infos=0&ui_controls=0&ui_stop=0"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true"
+  ></iframe>
   <p>
-    Lizozomlar, hücrede sindirim işlevi gören organellerdir. Eski organelleri, yabancı maddeleri parçalayarak hücreyi temizler. Enzim içerir.
+    Lizozomlar, hücre içindeki atık maddeleri ve yabancı partikülleri sindiren organellerdir. Hücrenin temizlik işlerini yapar.
   </p>
-  <a href="index.html">Ana Sayfaya Dön</a>
 </body>
 </html>
